--- a/package.json
+++ b/package.json
@@ -23,10 +23,9 @@
 		"build": "n8n-node build",
 		"build:watch": "tsc --watch",
 		"dev": "n8n-node dev",
-		"lint": "tsc --noEmit && biome check --write",
-		"lint:n8n": "n8n-node lint",
-		"lint:n8n:fix": "n8n-node lint --fix",
-		"lint:staged": "biome check --write --staged --no-errors-on-unmatched --error-on-warnings && git add -u",
+		"format": "prettier --write .",
+		"lint": "tsc --noEmit && n8n-node lint",
+		"lint:fix": "n8n-node lint --fix",
 		"release": "n8n-node release",
 		"prepublishOnly": "n8n-node prerelease",
 		"prepare": "husky"
@@ -45,13 +44,13 @@
 		]
 	},
 	"devDependencies": {
-		"@biomejs/biome": "2.3.13",
 		"@commitlint/cli": "^20.4.0",
 		"@commitlint/config-conventional": "^20.4.0",
 		"@n8n/node-cli": "*",
 		"@types/node": "^22.0.0",
 		"eslint": "9.32.0",
 		"husky": "^9.1.7",
+		"prettier": "^3.3.0",
 		"release-it": "^19.0.4",
 		"typescript": "5.9.2"
 	},
