--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
 		"lint:fix": "n8n-node lint --fix",
 		"release": "n8n-node release",
 		"prepublishOnly": "n8n-node prerelease",
-		"prepare": "husky"
+		"prepare": "husky",
+		"test": "vitest run",
+		"test:watch": "vitest",
+		"test:coverage": "vitest run --coverage"
 	},
 	"files": [
 		"dist"
@@ -52,7 +55,8 @@
 		"husky": "^9.1.7",
 		"prettier": "^3.3.0",
 		"release-it": "^19.0.4",
-		"typescript": "5.9.2"
+		"typescript": "5.9.2",
+		"vitest": "^4.0.18"
 	},
 	"peerDependencies": {
 		"n8n-workflow": "*"
