chore: apply prettier formatting and add upsertRows tests
- Apply consistent code formatting across all TypeScript files
- Update lint scripts to include Prettier checks
- Add comprehensive tests for upsertRows operation
- Format markdown tables in documentation

--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
 		"build:watch": "tsc --watch",
 		"dev": "n8n-node dev",
 		"format": "prettier --write .",
-		"lint": "tsc --noEmit && n8n-node lint",
-		"lint:fix": "n8n-node lint --fix",
+		"lint": "tsc --noEmit && n8n-node lint && prettier --check .",
+		"lint:fix": "n8n-node lint --fix && prettier --write .",
 		"release": "n8n-node release",
 		"prepublishOnly": "n8n-node prerelease",
 		"prepare": "husky",
